Added welcome page

--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -1,7 +1,7 @@
-<h1 style="text-align: center;"><span style="background-color: #ffffff; color: #000000;"><strong>Welcome!</strong></span></h1>
+<h1 style="text-align: center;"><span style="color: #000000;"><strong>Welcome!</strong></span></h1>
 <p>&nbsp;</p>
-<h2><span style="background-color: #ffffff; color: #000000;"><strong>This is a place for people who love to enhance their technical knowledge. <br />Feel free to go through the tech pages.</strong></span></h2>
+<h2><span style="color: #000000;"><strong>This is a place for people who love to enhance their technical knowledge. <br />Feel free to go through the tech pages.</strong></span></h2>
 <p>&nbsp;</p>
-<h1><span style="background-color: #ffffff; color: #000000;"><strong>Hello! I am Rajith.</strong></span></h1>
-<h2><span style="background-color: #ffffff; color: #000000;"><strong>About me,</strong></span></h2>
-<h3><span style="background-color: #ffffff; color: #000000;"><strong>I am Rajith P, an IT professional born and brought up in Kerala,&nbsp; presently residing in Banglore.<br />Presently interested in blogging on Kubernetes administration. Please have a look at my <a style="background-color: #ffffff; color: #000000;" href="https://rajith.in/Kubernetes/" target="_blank" rel="noopener">Introductory series on Kubernetes.</a></strong></span></h3>
+<h1><span style="color: #000000;"><strong>Hello! I am Rajith.</strong></span></h1>
+<h2><span style="color: #000000;"><strong>About me,</strong></span></h2>
+<h3><span style="color: #000000;"><strong>I am Rajith P, an IT professional born and brought up in Kerala,&nbsp; presently residing in Banglore.<br />Presently interested in blogging on Kubernetes administration. Please have a look at my <a style="color: #000000;" href="https://rajith.in/Kubernetes/" target="_blank" rel="noopener">Introductory series on Kubernetes.</a></strong></span></h3>
